--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <th>Process</th>
               <th>Arrival Time</th>
               <th>Execute Time</th>
-              <th class="servtime">Service Time</th>
+              <th class="servtime">Waiting Time</th>
               <th class="priority-only">Priority</th>
           </tr>
           <tr>
